--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <footer>
         <div class="container">
             <p>
-                &copy; Games Shops - Todos os direitos reservados - 2024
+                &copy; Games Shop - Todos os direitos reservados - 2024
             </p>
         </div>
     </footer>
